syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/OmSingh2003/vaultguard-api/pb";

service VaultguardAPI {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}
